--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
     "postcss-cli": "^11.0.0",
+    "sass": "^1.76.0",
     "typescript": "^5.2.2",
     "vite": "^5.2.0"
   }
